--- a/NetConsole/NetConsole.csproj
+++ b/NetConsole/NetConsole.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F93E96B7-7920-4C41-A83A-E322A23DDDEA}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NETFramework</RootNamespace>
-    <AssemblyName>NETFramework</AssemblyName>
+    <ProjectGuid>{5384E86B-9642-42C1-ABAF-793DF7779623}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>NetConsole</RootNamespace>
+    <AssemblyName>NetConsole</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,13 +43,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AOP\AopAtttibutes.cs" />
-    <Compile Include="AOP\AopBoundContext.cs" />
-    <Compile Include="AOP\AopContextProperty.cs" />
-    <Compile Include="AOP\AopMessageSink.cs" />
-    <Compile Include="AOP\DefaultAopReturnMessage.cs" />
-    <Compile Include="AOP\IAopHandler.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NETFramework\NETFramework.csproj">
+      <Project>{f93e96b7-7920-4c41-a83a-e322a23dddea}</Project>
+      <Name>NETFramework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StandFramework\StandFramework.csproj">
+      <Project>{b55f27ee-2fd6-4af6-84e5-09093ea19ad5}</Project>
+      <Name>StandFramework</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
