--- a/NETFramework/NETFramework.csproj
+++ b/NETFramework/NETFramework.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AOP\AopMessageSink.cs" />
     <Compile Include="AOP\DefaultAopReturnMessage.cs" />
     <Compile Include="AOP\IAopHandler.cs" />
+    <Compile Include="Helpers\ExpressionHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
